# OracleSlayer

./: CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
oradb_extractor/: __init__.py  config.py  errors.py  oradb_extractor.py  pool.py
oradb_extractor/extractors/: __init__.py  base.py  batch.py  streaming.py
oradb_extractor/utils/: __init__.py  monitoring.py  performance.py
oradb_extractor/writers/: __init__.py  pandas.py  parquet.py
tests/integration/: test_integration.py
tests/performance/: test_perf.py
tests/unit/: test_config.py  test_extractor.py
